# allium-renderer

./: Cargo.toml  README.md
.github/workflows/: commitlint.yml  release.yml
crates/allium-renderer/: Cargo.toml
crates/allium-renderer-cli/src/: fetch.rs  main.rs  serve.rs  static_manifest.rs
crates/allium-renderer-core/src/: lib.rs  profile_resolve.rs  profile_scene.rs
crates/allium-renderer-host/src/: provider.rs
crates/allium-renderer-wasm/: README.md  package-lock.json  package.json
crates/allium-renderer-wasm/demo/: README.md  demo.js  static-manifest.js
crates/allium-renderer-wasm/src/: index.ts  lib.rs  originPrebuiltSdfAtlasPackage.ts  worker-client.ts  worker.ts
crates/allium-renderer/examples/: bench_render.rs  compare_sdf.rs  render_bonds_honor.rs
crates/allium-renderer/src/: asset_keys.rs  assets.rs  deck_result.rs  instantiate.rs  lib.rs  ranking.rs  render_document.rs  renderer.rs  traits.rs  widget_node.rs
crates/allium-renderer/tools/: dump_outline_sdf.rs  render_deck.rs  render_profile.rs  render_task043_layer.rs
examples/: bench_render.rs
src/: asset_keys.rs  assets.rs  executor.rs  instantiate.rs  lib.rs  mysekai_harvest.rs  personal_profile.rs  ranking.rs  render_document.rs  renderer.rs
src/elements/: mod.rs
src/elements/generals/: mod.rs
src/elements/honor/: standard.rs
src/sdf/: mod.rs  rasterize.rs
src/sdf/outline/: mod.rs
src/text/: mod.rs
src/widgets/: card_thumbnail.rs  card_util.rs  glass_panel.rs  image.rs  mod.rs  panel.rs  stats_badge.rs  text.rs  text_badge.rs  theme.rs
src/widgets/adapters/: card_member.rs  general.rs  honor.rs  simple_asset.rs
(+10 files in other folders)
